--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -1,2 +1,48 @@
 COMMAND_BOGDAN_TUROV: 'Богдан туров лох'
-COMMAND_GOLEM: 'Джолем.'
+LANGUAGE_CHANGE: ' §d§lNeko§f§lCloud §8| §fЯзык успешно изменен на §d%s'
+LANG_COMMAND_USAGE: ' §d§lNeko§f§lCloud §8| §fИспользуйте: §e/lang <язык> §7(доступные языки: English, Russian)'
+JANUARY: 'Январь'
+FEBRUARY: 'Февраль'
+MARCH: 'Март'
+APRIL: 'Апрель'
+MAY: 'Май'
+JUNE: 'Июнь'
+JULY: 'Июль'
+AUGUST: 'Август'
+SEPTEMBER: 'Сентябрь'
+OCTOBER: 'Октябрь'
+NOVEMBER: 'Ноябрь'
+DECEMBER: 'Декабрь'
+
+RESTART: 'Рестарт сервера через'
+UNKNOWN_SUBCOMMAND: ' §d§lNeko§f§lCloud §8| §fДанной §5команды §fне существует.'
+
+BOSS_BAR_LOBBY:
+- '§fРаздаем §dГолем. §fна сайте §dNekoCloud.Me'
+- '§fНюхни смачнейшей бебры: §dvk.com/nekocloud'
+BOSS_BAR_LOBBY_JOIN: '§fВы зашли понюхать бебры на §dNekoCloud.Me'
+
+RULES_COMMAND: ' §d§lNeko§f§lCloud §8| §fПравила проекта: §d%s'
+RULES_COMMAND_HOVER: '§fНажмите сюда, чтобы перейти по ссылке'
+
+NO_PERMS: ' §d§lNeko§f§lCloud §8| §fНедостаточно прав'
+NO_PERMS_GROUP: ' §d§lNeko§f§lCloud §8| §fНедостаточно прав, купите %s'
+NO_PERMS_NEKO_ONLY: ' §d§lNeko§f§lCloud §8| §fДанная функция доступна только для §d§lNEKO'
+
+KILL_MOB: '§d+%s %s §fза убийство моба'
+PLAYER_LEFT: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fпокинул игру'
+PING: ' §d§lNeko§f§lCloud §8| §fПинг: §d%s §fмс.'
+RARITY: 'Редкость'
+PLAYERS_ONLY: '§cКоманда доступна только игрокам!'
+
+UNKNOWN: 'Неизвестно'
+ANSWER_YES: 'Да'
+ANSWER_NO: 'Нет'
+ABSENT: 'Отсутствует'
+REMOVED: '§cУдалено'
+
+PLAYTIME_COMMAND: ' §d§lNeko§f§lCloud §8| §fНаиграно: §d%s'
+JOIN_PLAYER_LO_LOBBY: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fзашел на сервер'
+LOBBY_DISABLED_MESSAGE_TO_CHAT: ' §d§lNeko§f§lCloud §8| §fЧат отключен в настройках'
+NO_FOUND_PLAYER: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fне найден'
+NO_NEVER_PLAYER: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fникогда не играл на нашем проекте'
