--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -46,3 +46,286 @@ JOIN_PLAYER_LO_LOBBY: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fзаш
 LOBBY_DISABLED_MESSAGE_TO_CHAT: ' §d§lNeko§f§lCloud §8| §fЧат отключен в настройках'
 NO_FOUND_PLAYER: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fне найден'
 NO_NEVER_PLAYER: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fникогда не играл на нашем проекте'
+
+NO_PERM: ' §d§lNeko§f§lCloud §8| §fУ вас §5недостаточно §fправ.'
+COMMAND_COOLDOWN: ' §d§lNeko§f§lCloud §8| §fПодожди §d%s §fсекунд перед повторным использованием команды'
+COMMAND_USE_NEKOBUNGEE:
+- ' §d§lNeko§f§lCloud §8:: §fBungee by §b_Novit_ §f| §7github.com/novitpw'
+- '     §7Алиасы: /nekob, nbungee, nb'
+- ''
+- '     §d/nekobungee cfgreload §f- Перезагрузить все конфиги'
+- '     §d/nekobungee list §f- Список игроков на проекте|сервере' 
+- '     §d/nekobungee wl on/off §f- Включить/выключить белый список'
+- '     §d/nekobungee wl list §f- Вывести список игроков в белом списке'
+- '     §d/nekobungee wl add/del <игрок> §f- Добавить/удалить игрока из белого списка'
+HUB_TELEPORT: ' §d§lNeko§f§lCloud §8| §fВы были телепортированы на сервер §d%s'
+PING: ' §d§lNeko§f§lCloud §8| §fВаш пинг: §d%s§fмс.'
+PING_OTHER: ' §d§lNeko§f§lCloud §8| §fПинг игрока §d%s: §5%s§fмс.'
+NOT_SERVER: ' §d§lNeko§f§lCloud §8| §fСервер §5%s §fне подключен к прокси.'
+PLAYER_OFFLINE: ' §d§lNeko§f§lCloud §8| §fИгрок §5%s §fне в сети!'
+ONLINE_SERVER: ' §d§lNeko§f§lCloud §8| §fОнлайн сервера §d%s§f: §5%s'
+ONLINE_GLOBAL: ' §d§lNeko§f§lCloud §8| §fОнлайн проекта: §d%s'
+CONNECTING: ' §d§lNeko§f§lCloud §8| §fПодключение...'
+ALREADY_CONNECTED: ' §d§lNeko§f§lCloud §8| §fТы уже находишься на сервере §d%s§f!'
+COMMAND_SERVER_USE: ' §d§lNeko§f§lCloud §8| §fИспользование: §5/server <сервер>'
+
+COMMAND_SEND_USE: ' §d§lNeko§f§lCloud §8| §fИспользование: §5/send <all|current|игрок> <сервер>'
+SEND_SUCCESS: ' §d§lNeko§f§lCloud §8| §f§d%s §fигроков было перемещено на сервер §5%s'
+
+COMMAND_LIST: '[%s] %s - %s'
+COMMAND_USE_MSG: ' §d§lЧАТ §8| §fИспользование: §5/msg <игрок> <сообщение>'
+COMMAND_USE_REPLY: ' §d§lЧАТ §8| §fИспользование: §5/r <сообщение>'
+COMMAND_USE_IGNORE: ' §d§lЧАТ §8| §fИспользование: §5/ignore <игрок>'
+# POST MESSAGES
+PM_SELF_IGNORE: ' §d§lЧАТ §8| §fТы не можешь игнорировать сам себя!'
+PM_SELF_TO_ME: ' §d§lЧАТ §8| §fТы не можешь написать самому себе!'
+PM_IGNORED_USER: ' §d§lЧАТ §8| §fТеперь ты игнорируешь игрока §5%s'
+PM_ALLOWED_USER: ' §d§lЧАТ §8| §fТы больше не игнорируешь игрока §5%s'
+PM_MISSING_PLAYER: ' §d§lЧАТ §8| §fИспользование: §5/msg <игрок> <сообщение>'
+PM_MISSING_MESSAGE: ' §d§lЧАТ §8| §fИспользование: §5/msg <игрок> <сообщение>'
+PM_ON: " §d§lЧАТ §8| §fТеперь тебе никто §5не может §fнаписать!"
+PM_OFF: " §d§lЧАТ §8| §fТеперь тебе §dмогут §fнаписать!"
+PM_DISABLED: ' §d§lЧАТ §8| §fОшибка, игрок добавил тебя в ЧС или отключил сообщения для всех!'
+PM_TO_SENDER: ' §dЯ §8➾ §7%s :: §f%s'
+PM_TO_RECEIVER: ' §7%s §8➾ §dЯ§7 :: §f%s'
+PM_NO_REPLY: " §d§lЧАТ §8| §fИгрок, которому нужно отправить сообщение, не найден!"
+
+PM_SPY: '§5 §lСЛЕЖКА-ЛС §8§l| §7%s §8➾ %s§7: §f%s'
+
+GAME_DATA_UPDATED_KICK: |-
+    §d§lNeko§f§lCloud§r
+    §f
+    §fВаши игровые данные были обновлены,
+    §fперезайдите на сервер.
+WHITELIST_KICK_MESSAGE: |-
+    §d§lNeko§f§lCloud§r
+    §f
+    §fНа сервере ведутся §dтехнические работы§f.
+    §fСледите за новостями: §5vk.com/nekocloud
+
+CLICK_TO_SITE: '§d↪ §7Кликни, чтобы перейти на сайт'
+ANNOUNCER_MESSAGE_VK:
+- '§d╔'
+- '§d╠ §fХотите быть первым вкурсе §5§lвсех §fновостей §fсервера?'
+- '§d╠ §5§lВступайте §fв наше сообщество §dVK!'
+- '§d╠ §fСсылка: https://vk.com/§d§lNeko§f§lCloud§r'
+- '§d╚'
+ANNOUNCER_MESSAGE_SALE:
+- '§d╔'
+- '§d╠ §fУ нас скидки §5§l60 процентов §fна весь донат!'
+- '§d╠ §fЧтобы узнать цены, используй команду: §d§l/donate'
+- '§d╠ §fПриобрести привилегию можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╚'
+ANNOUNCER_MESSAGE_FREE:
+- '§d╔'
+- '§d╠ §5§lХочешь получить бесплатные рубли?'
+- '§d╠ §fНапиши команду §d§l/reward §fи играй'
+- '§d╠ §fна нашем сервере!'
+- '§d╚'
+ANNOUNCER_HOVER_FREE: '§d↪ §7Кликни, чтобы выполнить команду'
+ANNOUNCER_MESSAGE_DONATE_SAVE:
+- '§d╔'
+- '§d╠ §fВсе §dпривилегии §fна §dнашем §fсервере §dсохраняются'
+- '§d╠ §fи §5не §fпропадают §dпосле §fкаких §dлибо §fдействий!'
+- '§d╠ §fПриобрести привилегию можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╚'
+ANNOUNCER_MESSAGE_BUY_RUB:
+- '§d╔'
+- '§d╠ §fНадоели игроки которых трудно убивать?'
+- '§d╠ §fКупи больше §dрублей §fи §5закупись §fтоповым '
+- '§d╠ §fшмотом в §5/shop§f Тогда ты их точно §5победишь§f!'
+- '§d╠ §fКупить рубли можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╚'
+ANNOUNCER_MESSAGE_DISCORD:
+- '§d╔'
+- '§d╠ §fУ нашего сервера есть свой §9§lDiscord§f!'
+- '§d╠ §fВ нем вы можете §dобщаться §fс другими игроками, а так же §5торговать'
+- '§d╠ §fразличными предметами сервера. Ссылка: §ddiscord.gg/XpA7rDNpFp'
+- '§d╚'
+ANNOUNCER_MESSAGE_BUY_CASE:
+- '§d╔'
+- '§d╠ §fХочешь §eпопытать §fсвою §dудачу §fв §dкейсах?'
+- '§d╠ §fТогда смелее §dприобрети §fкейсы на §fнашем §dсайте!'
+- '§d╠ §fПриобрести больше кейсов: §d§lNeko§f§lCloud.me§r'
+- '§d╚'
+
+# AUTH
+COMMAND_USE_CHANGEPASSWORD: ' §d§lNeko§f§lCloud §8| §fИспользование: §5/changepassword §5<старый_пароль> §5<новый_пароль>'
+COMMAND_USE_LICENSE: ' §d§lNeko§f§lCloud §8| §fИспользование: §5/license §don§8/§doff'
+COMMAND_USE_LOGIN: ' §d§lNeko§f§lCloud §8| §fАвторизируйтесь - §5/login <пароль>'
+COMMAND_USE_REGISTER: ' §d§lNeko§f§lCloud §8| §fЗарегистрируйтесь - §5/reg <пароль> §5<повтор_пароля>'
+COMMAND_USE_IMPORT: 'Using: /auth import table_name player_name_column password_column ip_column'
+
+AUTH_NOT_REGISTERED: ' §d§lNeko§f§lCloud §8| §fВы не зарегистрированны!  §5Зарегистрируйтесь'
+AUTH_NOT_AUTHORIZED: ' §d§lNeko§f§lCloud §8| §fВы не авторизированны! §5Войдите в аккаунт'
+AUTH_MIN_PASSWORD_LENGTH: ' §d§lNeko§f§lCloud §8| §fМинимальная длина пароля §c%s §fсимволов'
+AUTH_MAX_PASSWORD_LENGTH: ' §d§lNeko§f§lCloud §8| §fМаксимальная длина пароля §c%s §fсимволов'
+AUTH_LOGIN_WRONG_PASSWORD: ' §d§lNeko§f§lCloud §8| §fВы ввели §cнеправильный §fпароль'
+AUTH_CHANGE_PASSWORD: ' §d§lNeko§f§lCloud §8| §fВы §dуспешно §fизменили пароль §7( %s )'
+AUTH_PASSWORD_MISMATCH: ' §d§lNeko§f§lCloud §8| §fПароли §5не §fсовпадают!'
+
+AUTH_LICENSE_OFF: ' §d§lNeko§f§lCloud §8| §fВы §5отключили §fлицензионный аккаунт'
+AUTH_LICENSE_ON: ' §d§lNeko§f§lCloud §8| §fВы §dвключили §fлицензионный аккаунт'
+AUTH_LICENSE_NOT_EXISTS: ' §d§lNeko§f§lCloud §8| §fВаш аккаунт уже помечен как §cне лицензионный'
+AUTH_LICENSE_DISABLE_HELP: ' §d§lNeko§f§lCloud §8| §fЧтобы отключить §cлицензионный аккаунт §fиспользуйте: §c§l/license off'
+AUTH_LICENSE_TO_CONFIRM: ' §d§lNeko§f§lCloud §8| §fПерезайдите в игру с §dлицензионного§f аккаунта, чтобы §eподтвердить'
+AUTH_LICENSE_NOT_PREMIUM:  ' §d§lNeko§f§lCloud §8| §fОшибка, ваш аккаунт §5не является §fлицензионным!'
+
+AUTH_ALREADY_LOGINED: ' §d§lNeko§f§lCloud §8| §fВы уже §dвошли §fна сервер'
+AUTH_DOUBLE_AUTH_WAIT: ' §d§lNeko§f§lCloud §8| §fПодтвердите вход через §5§lVK'
+AUTH_LOGIN_MANY_ERRORS:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВы слишком много раз ввели неправильный пароль'
+AUTH_DOUBLE_AUTH_CONFIRM: ' §d§lNeko§f§lCloud §8| §fПодтвердите вход через §5§lVK'
+AUTH_LOGIN_SUCCESS_NON_VK:
+- '§f'
+- ' §d§lNeko§f§lCloud §8| §fАвторизация §dуспешно §fпройдена'
+- '§f'
+- ' §5§l⚠ Внимание! §fВы не привязали страницу §dВКонтакте§f к своему аккаунту'
+- ' Сделав это, вы сможете лучше защитить свой аккаунт!'
+- ' Сделайте это прямо сейчас, написав в сообщения группы: §5§lvk.com/nekocloud'
+- ' Команда - §6!аккаунт привязать <ник>'
+- '§f'
+AUTH_LOGIN_SUCCESS_WITH_VK: ' §d§lNeko§f§lCloud §8| §fАвторизация §dуспешно §fпройдена'
+AUTH_LOGOUT:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВы успешно вышли из аккаунта'
+AUTH_ALREADY_REGISTERED: ' §d§lNeko§f§lCloud §8| §fВы уже §dзарегистрированы'
+AUTH_REGISTER_SUCCESS: ' §d§lNeko§f§lCloud §8| §fВы успешно §dзарегистрировались§f, ваш пароль: §7%s'
+AUTH_USER_IS_BANNED:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fАккаунт заблокирован через §5ВКонтакте'
+AUTH_VK_SEND_CODE: ' §d§lNeko§f§lCloud §8| §fВаш код активации: §d%s'
+AUTH_BIND_FOR_PLAYER: ' §d§lNeko§f§lCloud §8| §fВы успешно привязали свою страницу §5VK §fк аккаунту'
+AUTH_LOGIN_WITH_VK: ' §d§lNeko§f§lCloud §8| §fАвторизация §dуспешно §fпройдена'
+AUTH_DOUBLE_AUTH_DISMISS:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВход был отменен через §dVK'
+AUTH_VK_KICK:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fАккаунт кикнут через §dVK'
+AUTH_LICENSE_CONFIRM_SUCCESS: ' §d§lNeko§f§lCloud §8| §fВы успешно подтвердили §dлицензионный §fаккаунт'
+AUTH_LICENSE_FORCELOGIN: ' §d§lNeko§f§lCloud §8| §fВы §dуспешно §fвошли с помощью §5лицензионного аккаунта'
+AUTH_BLOCK_COMMANDS: ' §d§lNeko§f§lCloud §8| §fВы не можете использовать команды, сначала §cвойдите §fв аккаунт'
+AUTH_MIN_NICK_LENGTH:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВаш ник слишком маленький, минимальная длина: §d%s символа'
+AUTH_NOT_ALLOWED_NICK:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВаш ник содержит §5запрещенные §fсимволы'
+AUTH_NOT_LEGACY_NICK:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВойдите с корректного ника - §d§l%s'
+AUTH_MAX_REGS_PER_IP:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВы достигли предела по количеству аккаунтов'
+AUTH_REGISTER_TIMEOUT:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВремя регистрации истекло, перезайдите на сервер'
+AUTH_LOGIN_TIMEOUT:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§dВремя авторизации истекло, перезайдите на сервер'
+AUTH_DOUBLE_AUTH_TIMEOUT:
+- '§d§lNeko§f§lCloud§r'
+- ' '
+- '§fВремя подтвердждения входа через'
+- '§9ВКонтакте §cистекло, §fперезайдите на сервер'
+AUTH_REGISTER_MESSAGE: ' §d§lNeko§f§lCloud §8| §fЗарегистрируйтесь - §5/reg <пароль> §5<повтор_пароля>'
+AUTH_LOGIN_MESSAGE: ' §d§lNeko§f§lCloud §8| §fАвторизируйтесь - §5/login §5<пароль>'
+AUTH_DOUBLE_AUTH_MESSAGE: ' §d§lNeko§f§lCloud §8| §fПодтвердите вход на сервер через §d§lВКонтакте'
+
+BOSS_BAR_REGISTER: '§8§l⎰§r §fВремени на регистрацию: §5§l%s§r §fсекунд §8§l⎱§r'
+BOSS_BAR_LOGIN: '§8§l⎰§r §fВремени на вход: §5§l%s§r §fсекунд §8§l⎱§r'
+BOSS_BAR_DOUBLE_AUTH: '§8§l⎰§r §fВремени на подтверждение: §5§l%s§r §fсекунд §8§l⎱§r'
+
+VK_NOTIFICATE_LOGIN:
+- '⚠ Выполнен вход в аккаунт %s с IP адреса - %3$s | %4$s'
+- 'Если это были не вы, то срочно заблокируйте аккаунт!'
+
+VK_COMMAND_COOLDOWN: '⚠ Подождите %s секунд перед повторным использованием команды'
+VK_COMMAND_NOT_FOUND: '&#10060; Вы ввели неизвестную подкоманду'
+VK_HELP_WITH_AN_USER:
+- 'Чтобы привязать игровой аккаунт к вашему аккаунту ВКонтакте, напишите: !аккаунт привязать [ник]'
+- ''
+- '⚠ Во время привязки необходимо быть на сервере для получения кода подтверждения'
+VK_HELP_WITH_USER: |-
+    📱 Привязанный аккаунт в игре - %s (%s)
+
+    [*] Список подкоманд для !аккаунт
+      - !аккаунт восстановить - получить новый пароль
+      - !аккаунт дваэтапа - включить двух-этапную авторизацию
+      - !аккаунт статус - узнать сервер на котором сейчас аккаунт
+      - !аккаунт кикнуть - кикнуть аккаунт с сервера
+      - !аккаунт уведомления - вкл/выкл отображение ИП адреса при входе на сервер
+      - !аккаунт заблокировать - заблокировать/разблокировать аккаунт
+      - !аккаунт отвязать - отвязать аккаунт от ВКонтакте
+
+    [*] Настройки:
+      ● Уведомления о входе - %s
+      ● Блокировка аккаунта - %s
+VK_KEYBOARD_HIDE: '⚠ Клавиатура убрана. Чтобы открыть клавиатуру заново напишите - !аккаунт'
+VK_KEYBOARD_SHOW: 'Управление аккаунтом'
+VK_NOT_BINDED: '❌ Ваш профиль не имеет привязанных аккаунтов'
+VK_USER_NOT_AUTHORIZED: '❌ Чтобы привязать аккаунт, вам необходимо войти в игру'
+VK_SET_BAN: 'Аккаунт успешно заблокирован (❌)'
+VK_UNSET_BAN: 'Аккаунт успешно разблокирован (✔)'
+VK_BIND_COMMAND_USE: '📕 Ошибка, пишите - !аккаунт привязать <ник>'
+VK_REQUEST_IS_SENDED: '❌ Код уже отправлен, подождите %s секунд перед повторным использованием'
+VK_PLAYER_NOT_ONLINE: '❌ Ошибка, аккаунт не в игре'
+VK_CHANGE_PASSWORD: '&#128110; Вы изменили пароль на: %s'
+VK_DOUBLE_AUTH_CONFIRM: '&#128110; Подтвердите вход в аккаунт'
+VK_NOTIFICATE_QUIT: '&#10134; Вы вышли из игры'
+VK_SET_DOUBLE_AUTH: '✔ Двухэтапная авторизация: включена'
+VK_UNSET_DOUBLE_AUTH: '❌ Двухэтапная авторизация: выключена'
+VK_SET_NOTIFICATION: '✔ Уведомления о присоединении/отсоединении включены'
+VK_UNSET_NOTIFICATION: '❌ Уведомления при присоединении/отсоединении выключены'
+VK_USER_IS_BINDED: '❌ К вашей странице уже привязан аккаунт'
+VK_PLAYER_IS_BINDED: '❌ Аккаунт %s уже привязан другим человеком'
+VK_RESTORE_PASSWORD: '✔ Ваш новый пароль: %s'
+VK_STATUS: |-
+    [*] Основная статистика:
+    - Cервер: %s
+    - Последний ип: %s (%s)
+    - %s
+
+    [*] Основная информация:
+    - Ник: %s
+    - Лицензия: %s
+    - Уведомления: %s
+    - Блокировка: %s
+    - Двух-этапная авторизация: %s
+VK_UNBIND: '✔ Игровой аккаунт %s успешно отвязан от ВКонтакте'
+VK_KICK: '✔ Аккаунт успешно кикнут с сервера'
+VK_SEND_CODE: '⚠ На ваш игровой аккаунт был отправлен код, подтвердите его тут командой !аккаунт код [код]'
+VK_NO_REQUESTS: '❌ У вас нету активных кодов активации'
+VK_COMMAND_CODE_USE: 'Подсказка: !аккаунт код [код]'
+VK_CODE_IS_WRONG: '❌ Неверный код'
+VK_BIND: '✔ Вы успешно привязали к профилю VK аккаунт %s'
+VK_NO_DOUBLE_AUTH_REQUESTS: '❌ У вас нет запросов на вход'
+#ADMIN
+VK_AUTH_COMMAND_HELP: |-
+    /auth cp <ник> <новый пароль> - сменить пароль игроку
+    /auth unregister <ник> - удалить аккаунт из базы
+VK_CHANGEPASSWORD_COMMAND_HELP: '❌ Использование - /auth cp <ник> <новый пароль>'
+VK_UNREGISTER_COMMAND_HELP: '❌ Использование - /auth unreg <ник>'
+VK_ACCOUNT_UNREGISTER: '⚠ Ваш аккаунт %s был разрегестрирован администратором'
+VK_ACCOUNT_CHANGEPASSWORD: '⚠ У вашего аккаунта %s был изменен пароль! Новый пароль - %s'
+VK_AUTH_COMMAND_FOR_ADMIN_ATTEMPT: '✔ Команда успешно выполнена'
+VK_COMMAND_ONLY_ADMIN: '❌ Команда доступна только администраторам'
+AUTH_COMMAND_HELP: |-
+    /auth reload - reload config
+    /auth import table_name player_name_column password_column ip_column - import auth data
+    /auth unreg [nick] - unregister player
+    /auth cp [nick] [new_password] - changepass for player
+
