--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -106,13 +106,13 @@ ANNOUNCER_MESSAGE_VK:
 - '§d╔'
 - '§d╠ §fХоти быть перТы м вкурсе §5§lвсех §fновостей §fсервера?'
 - '§d╠ §5§lВступайте §fв наше сообщество §dVK!'
-- '§d╠ §fСсылка: https://vk.com/§d§lNeko§f§lCloud§r'
+- '§d╠ §fСсылка: §dvk.com/NekoCloud§r'
 - '§d╚'
 ANNOUNCER_MESSAGE_SALE:
 - '§d╔'
 - '§d╠ §fУ нас скидки §5§l60 процентов §fна весь донат!'
 - '§d╠ §fЧтобы узнать цены, используй команду: §d§l/donate'
-- '§d╠ §fПриобрести привилегию можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╠ §fПриобрести привилегию можно на нашем сайте: §dNekoCloud.me§r'
 - '§d╚'
 ANNOUNCER_MESSAGE_FREE:
 - '§d╔'
@@ -125,26 +125,26 @@ ANNOUNCER_MESSAGE_DONATE_SAVE:
 - '§d╔'
 - '§d╠ §fВсе §dпривилегии §fна §dнашем §fсервере §dсохраняются'
 - '§d╠ §fи §5не §fпропадают §dпосле §fкаких §dлибо §fдействий!'
-- '§d╠ §fПриобрести привилегию можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╠ §fПриобрести привилегию можно на нашем сайте: §dNekoCloud.me§r'
 - '§d╚'
 ANNOUNCER_MESSAGE_BUY_RUB:
 - '§d╔'
 - '§d╠ §fНадоели игроки которых трудно убивать?'
-- '§d╠ §fКупи больше §dрублей §fи §5закупись §fтопоТы м '
+- '§d╠ §fКупи больше §dрублей §fи §5закупись §fтоповым'
 - '§d╠ §fшмотом в §5/shop§f Тогда Ты их точно §5победишь§f!'
-- '§d╠ §fКупить рубли можно на нашем сайте: §d§lNeko§f§lCloud.me§r'
+- '§d╠ §fКупить рубли можно на нашем сайте: §dNekoCloud.me§r'
 - '§d╚'
 ANNOUNCER_MESSAGE_DISCORD:
 - '§d╔'
 - '§d╠ §fУ нашего сервера есть свой §9§lDiscord§f!'
-- '§d╠ §fВ нем Ты можете §dобщаться §fс другими игроками, а так же §5торговать'
+- '§d╠ §fВ нем ты можешь §dобщаться §fс другими игроками, а так же §5торговать'
 - '§d╠ §fразличными предметами сервера. Ссылка: §ddiscord.gg/XpA7rDNpFp'
 - '§d╚'
 ANNOUNCER_MESSAGE_BUY_CASE:
 - '§d╔'
 - '§d╠ §fХочешь §eпопытать §fсвою §dудачу §fв §dкейсах?'
 - '§d╠ §fТогда смелее §dприобрети §fкейсы на §fнашем §dсайте!'
-- '§d╠ §fПриобрести больше кейсов: §d§lNeko§f§lCloud.me§r'
+- '§d╠ §fПриобрести больше кейсов: §dNekoCloud.me§r'
 - '§d╚'
 
 # AUTH
