--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -1,5 +1,5 @@
 LANGUAGE_CHANGE: ' §d§lNeko§f§lCloud §8| §fЯзык успешно изменен на §d%s'
-LANG_COMMAND_USAGE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §e/lang <язык> §7(доступные языки: English, Russian)'
+LANG_COMMAND_USAGE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §d/lang <язык> §7(доступные языки: English, Russian)'
 JANUARY: 'Январь'
 FEBRUARY: 'Февраль'
 MARCH: 'Март'
