--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -1,5 +1,6 @@
 LANGUAGE_CHANGE: ' §d§lNeko§f§lCloud §8| §fЯзык успешно изменен на §d%s'
-LANG_COMMAND_USAGE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §d/lang <язык> §7(доступные языки: English, Russian)'
+LANGUAGE_COMMAND_USE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §d/lang <язык> §7(доступные языки: English, Russian)'
+
 JANUARY: 'Январь'
 FEBRUARY: 'Февраль'
 MARCH: 'Март'
@@ -13,7 +14,7 @@ OCTOBER: 'Октябрь'
 NOVEMBER: 'Ноябрь'
 DECEMBER: 'Декабрь'
 
-RESTART: 'Рестарт сервера через'
+RESTART: 'Рестарт сервера через %s'
 UNKNOWN_SUBCOMMAND: ' §d§lNeko§f§lCloud §8| §fДанной §5команды §fне существует.'
 
 BOSS_BAR_LOBBY:
