--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -1,5 +1,5 @@
 LANGUAGE_CHANGE: ' §d§lNeko§f§lCloud §8| §fЯзык успешно изменен на §d%s'
-LANGUAGE_COMMAND_USE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §d/lang <язык> §7(доступные языки: English, Russian)'
+LANGUAGE_COMMAND_USE: ' §d§lNeko§f§lCloud §8| §fИспользуй: §d/lang <язык> §7(доступные языки: english, russian)'
 
 JANUARY: 'Январь'
 FEBRUARY: 'Февраль'
