--- a/src/lang/ru.yml
+++ b/src/lang/ru.yml
@@ -22,6 +22,20 @@ BOSS_BAR_LOBBY:
 - '§fНюхни смачнейшей бебры: §dvk.com/nekocloud'
 BOSS_BAR_LOBBY_JOIN: '§fТы зашел понюхать бебры на §dNekoCloud.Me'
 
+TAB_HEADER:
+- ''
+- '§d§lmc.Neko§f§lCloud.me§r"'
+- '§7❤ Лучший в своем роде ❤§r'
+- ''
+- '§fСервер: §5%server% §7(%s)'
+- '§fОбщий онлайн: §d%s/1000'
+- ''
+TAB_FOOTER:
+- ''
+- '§fПокупка доната: §d§lneko§f§lcloud.me§r'
+- '§fГруппа VK: §5vk.com/nekocloud'
+- ''
+
 RULES_COMMAND: ' §d§lNeko§f§lCloud §8| §fПравила проекта: §d%s'
 RULES_COMMAND_HOVER: '§fНажми сюда, чтобы перейти по ссылке'
 
@@ -240,6 +254,28 @@ AUTH_DOUBLE_AUTH_TIMEOUT:
 - ' '
 - '§fВремя подтвердждения входа через'
 - '§bВКонтакте §cистекло, §fперезайди на сервер'
+BUNGEE_ALREADY_ONLINE: |-
+    §d§lNeko§f§lCloud§r
+    §f 
+    §fДанный игрок уже на сервере!
+BUNGEE_INVALID_ADDRESS: |-
+    §d§lNeko§f§lCloud§r
+    §f 
+    §fВаш IP адрес содержит некорректные данные
+BUNGEE_ACCOUNT_DOES_NOT_BELONG: |-
+    §d§lNeko§f§lCloud§r
+    §f 
+    §fДанный аккаунт вам не принадлежит
+BUNGEE_NO_REASON_SPECIFIED: §5Причина не указана
+BUNGEE_SQL_ERROR: |-
+    §d§lNeko§f§lCloud§r
+    §f 
+    §fНе удалось загрузить данные авторизации
+    §7Пожалуйста, сообщите администрации: §9vk.me/nekocloud
+BUNGEE_IP_BLOCKED: |-
+    §d§lNeko§f§lCloud 
+    §f 
+    §fВаш IP адрес заблокирован на §55 минут §fза попытку взлома :/
 AUTH_REGISTER_MESSAGE: ' §d§lNeko§f§lCloud §8| §fЗарегистрируйся - §5/reg <пароль> §5<повтор_пароля>'
 AUTH_LOGIN_MESSAGE: ' §d§lNeko§f§lCloud §8| §fАвторизируйся - §5/login §5<пароль>'
 AUTH_DOUBLE_AUTH_MESSAGE: ' §d§lNeko§f§lCloud §8| §fПодтверди вход на сервер через §bВКонтакте'
@@ -253,7 +289,7 @@ VK_NOTIFICATE_LOGIN:
 - 'Если это был не ты, то срочно заблокируй аккаунт!'
 
 VK_COMMAND_COOLDOWN: '⚠ Подожди %s секунд перед повторным использованием команды'
-VK_COMMAND_NOT_FOUND: '&#10060; Ты ввел неизвестную подкоманду'
+VK_COMMAND_NOT_FOUND: '§#10060; Ты ввел неизвестную подкоманду'
 VK_HELP_WITH_AN_USER:
 - 'Чтобы привязать игровой аккаунт к твоему аккаунту ВКонтакте, напиши: !аккаунт привязать [ник]'
 - ''
@@ -282,8 +318,8 @@ VK_UNSET_BAN: 'Аккаунт успешно разблокирован (✔)'
 VK_BIND_COMMAND_USE: '📕 Ошибка, пиши - !аккаунт привязать <ник>'
 VK_REQUEST_IS_SENDED: '❌ Код уже отправлен, подожди %s секунд перед повторным использованием'
 VK_PLAYER_NOT_ONLINE: '❌ Ошибка, аккаунт не в игре'
-VK_CHANGE_PASSWORD: '&#128110; Ты изменил пароль на: %s'
-VK_DOUBLE_AUTH_CONFIRM: '&#128110; Подтверди вход в аккаунт'
+VK_CHANGE_PASSWORD: '§#128110; Ты изменил пароль на: %s'
+VK_DOUBLE_AUTH_CONFIRM: '§#128110; Подтверди вход в аккаунт'
 VK_SET_DOUBLE_AUTH: '✔ Двухэтапная авторизация: включена'
 VK_UNSET_DOUBLE_AUTH: '❌ Двухэтапная авторизация: выключена'
 VK_SET_NOTIFICATION: '✔ Уведомления о присоединении/отсоединении включены'
@@ -326,3 +362,19 @@ AUTH_COMMAND_HELP: |-
     /auth import table_name player_name_column password_column ip_column - import auth data
     /auth unreg [nick] - unregister player
     /auth cp [nick] [new_password] - changepass for player
+    
+NO_FOUND_PLAYER: ' §d§lNeko§f§lCloud §8| §fИгрок §d%s §fне найден'
+GROUP_GET_SUCCESS: ' §d§lNeko§f§lCloud §8| §fГруппа игрока: §d%s'
+GROUP_SET_USE: ' §d§lNeko§f§lCloud §8| §fИспользование: §d/group set <ник> <группа>'
+PLAYER_NAME_REGEX_FAILED: ' §d§lNeko§f§lCloud §8| §fНеправильно введен ник'
+GROUP_SET_TARGET_ERROR: ' §d§lNeko§f§lCloud §8| §fНевозможно установить группу'
+GROUP_SET_SUCCESS: ' §d§lNeko§f§lCloud §8| §fИгроку §d%s §fустановлена группа %s'
+GROUP_PURGE_SUCCESS: ' §d§lNeko§f§lCloud §8| §fИгроку §d%s §fуспешно установлена стандартная группа'
+GROUP_MERGE_USE: ' §d§lNeko§f§lCloud §8| §fИспользование: §d/group merge <старый ник> <новый ник>'
+GROUP_MERGE_DEFAULT: ' §d§lNeko§f§lCloud §8| §fИгрок имеет стандартную группу'
+GROUP_MERGE_SUCCESS: ' §d§lNeko§f§lCloud §8| §fГруппа успешно перенесена'
+GROUP_COMMAND_USE: |-
+    §d§l Neko§f§lCloud §8| §d/group get <ник> §f- Узнать группу игрока
+    §d§l Neko§f§lCloud §8| §d/group set <ник> §f- Установить группу игроку
+    §d§l Neko§f§lCloud §8| §d/group remove <ник> §f- Установить стандартную группу игроку
+    §d§l Neko§f§lCloud §8| §d/group merge <ник> <новый ник> §f- Перенести группу игрока другому игроку
